# kirigami-dfc

./: CMakeLists.txt  README.md  org.kde.dfc.desktop  org.kde.dfc.json  org.kde.dfc.metainfo.xml
android/: AndroidManifest.xml
src/: CMakeLists.txt  dfcconfig.kcfgc  fileio.cpp  fileio.h  main.cpp  qmlEnvironmentVariable.cpp  qmlEnvironmentVariable.h
src/contents/ui/: About.qml  main.qml
